--- a/Images.tex
+++ b/Images.tex
@@ -7,14 +7,11 @@
 \date{\today}
 
 \begin{document}
-\maketitle
 
-\begin{figure}
-    \centering
-    \includegraphics[width=0.7\linewidth]{transient/Upsilon_mass_comparisson.png}
-    \caption{}
-    \label{fig:label}
-\end{figure}
+
+\maketitle
+\input{results_table.tex}
+
 
 \begin{figure}
     \centering
@@ -37,6 +34,8 @@
     \caption{}
     \label{fig:label}
 \end{figure}
+
+
 
 
 \end{document}
