--- a/Images.tex
+++ b/Images.tex
@@ -12,7 +12,7 @@
 \maketitle
 \input{results_table.tex}
 
-
+\input{mass_width_results_table.tex}
 \begin{figure}
     \centering
     \includegraphics[width=0.49\linewidth]{transient/Upsilon_mass_DATA.png}
