--- a/Images.tex
+++ b/Images.tex
@@ -35,6 +35,12 @@
     \label{fig:label}
 \end{figure}
 
+\begin{figure}
+    \centering
+    \includegraphics[width=0.75\linewidth]{transient/Z-Error-Ellipse.pdf}
+    \caption{}
+    \label{fig:label}
+\end{figure}
 
 
 
