--- a/Images.tex
+++ b/Images.tex
@@ -11,7 +11,7 @@
 
 \maketitle
 \input{results_table.tex}
-
+\input{CHI2_ndf.tex}
 \input{mass_width_results_table.tex}
 \begin{figure}
     \centering
