--- a/CHI2_ndf.tex
+++ b/CHI2_ndf.tex
@@ -1,7 +1,11 @@
-\begin{tabular}{c}
+\begin{table}[H]
+\centering
+\begin{tabular}{cc}
 \hline
-CHI$^2$/ndf \\
+$\chi^2$ & ndf \\
 \hline
-8.452304 \\
+405.71 & 48 \\
 \hline
 \end{tabular}
+\caption{minimum $\chi^2$ and number of degrees of freedom}
+\end{table}
