--- a/mass_width_results_table.tex
+++ b/mass_width_results_table.tex
@@ -1,8 +1,12 @@
+\begin{table}[H]
+\centering
 \begin{tabular}{l c c}
 \hline
  & Mass & Width \\
 \hline
-values & 91.141867 & 2.000694 \\
-statistical error & 0.008757 & 0.025116 \\
+Values & 91.14187 & 2.00069 \\
+Statistical error & 0.00876 & 0.02512 \\
 \hline
 \end{tabular}
+\caption{Z Mass and width results with statistical error}
+\end{table}
