--- a/results_table.tex
+++ b/results_table.tex
@@ -1,8 +1,12 @@
+\begin{table}[H]
+\centering
 \begin{tabular}{l c c}
 \hline
  & Mass & Width \\
 \hline
-Calibration error & -0.003229 & 0.000379 \\
-Smearing error & -0.000075 & 0.001182 \\
+Calibration error & -0.00323 & 0.00038 \\
+Smearing error & -0.00007 & 0.00118 \\
 \hline
 \end{tabular}
+\caption{Z Systematic error on mass and width}
+\end{table}
