--- a/Images.tex
+++ b/Images.tex
@@ -1,19 +1,22 @@
 \documentclass{article}
 \usepackage{graphicx}
 \usepackage{amsmath}
-
+\usepackage{float}
+\input{constants.tex}
 \title{Images}
 \author{}
 \date{\today}
 
 \begin{document}
-
-
 \maketitle
+
+The mass of the Z boson was found to be \ZMass~$\pm$~\Zmassstaterror~$\pm$~\ZMasssysterror~GeV where the first error is statistical and the second systematic\\
+The width of the Z boson was found to be \ZWidth~$\pm$~\Zwidthstaterror~$\pm$~\ZWidthsysterror~GeV where the first error is statistical and the second systematic\\
+The correlation coefficient was \ZCorrelation
 \input{results_table.tex}
-\input{CHI2_ndf.tex}
+
 \input{mass_width_results_table.tex}
-\begin{figure}
+\begin{figure}[H]
     \centering
     \includegraphics[width=0.49\linewidth]{transient/Upsilon_mass_DATA.png}
     \includegraphics[width=0.49\linewidth]{transient/Upsilon_mass_U1S.png}
@@ -21,21 +24,25 @@
     \label{fig:label}
 \end{figure}
 
-\begin{figure}
+\begin{figure}[H]
     \centering
     \includegraphics[width=0.75\linewidth]{transient/Upsilon_mass_comparisson.png}
     \caption{}
     \label{fig:label}
 \end{figure}
 
-\begin{figure}
+\input{CHI2_ndf.tex}
+
+\begin{figure}[H]
     \centering
     \includegraphics[width=0.75\linewidth]{transient/Z-stack_similtaneous.pdf}
     \caption{}
     \label{fig:label}
 \end{figure}
 
-\begin{figure}
+
+
+\begin{figure}[H]
     \centering
     \includegraphics[width=0.75\linewidth]{transient/Z-Error-Ellipse.pdf}
     \caption{}
