Added the Upsilon mass error to the systematics

--- a/Images.tex
+++ b/Images.tex
@@ -1,6 +1,7 @@
 \documentclass{article}
 \usepackage{graphicx}
 \usepackage{amsmath}
+\usepackage{amssymb}
 \usepackage{float}
 \input{constants.tex}
 \title{Images}
