--- a/Images.tex
+++ b/Images.tex
@@ -36,7 +36,7 @@ The correlation coefficient was \ZCorrelation
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.75\linewidth]{transient/Z-stack_similtaneous.pdf}
+    \includegraphics[width=0.75\linewidth]{transient/Z-stack_similtaneous (real).pdf}
     \caption{}
     \label{fig:label}
 \end{figure}
@@ -45,11 +45,26 @@ The correlation coefficient was \ZCorrelation
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.75\linewidth]{transient/Z-Error-Ellipse.pdf}
+    \includegraphics[width=0.75\linewidth]{transient/Z-Error-Ellipse (real).pdf}
     \caption{}
     \label{fig:label}
 \end{figure}
 
+When seperating the positve and negative dipole data:
+\input{dipole_table.tex}
 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.75\linewidth]{transient/Z-stack_similtaneous (pos-magnet).pdf}
+    \caption{Positive dipole}
+    \label{fig:label}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.75\linewidth]{transient/Z-stack_similtaneous (neg-magnet).pdf}
+    \caption{negative dipole}
+    \label{fig:label}
+\end{figure}
 
 \end{document}
