significance_and_pointless_simchange

--- a/Images.tex
+++ b/Images.tex
@@ -66,5 +66,5 @@ When seperating the positve and negative dipole data:
     \caption{negative dipole}
     \label{fig:label}
 \end{figure}
-
+\input{"dipole_significance_table.tex"}
 \end{document}
